src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Action_Hash__c</fullName>
        <label>Action Hash</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting Reset</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>